--- a/css/style.css
+++ b/css/style.css
@@ -1,105 +1,150 @@
 :root {
-  --color-background: #FAF8F8;
-  --color-footer: #2E2B2B;
-  --color-header-border: #E1D8D9;
+	--color-background: #faf8f8;
+	--color-footer: #2e2b2b;
+	--color-header-border: #e1d8d9;
+	--color-black: #000000;
+	--color-light-black: #333333;
+	--color-orange: #feb546;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 body {
-  background-color: var(--color-background);
-  margin: 0px;
-  padding: 0px;
+	background-color: var(--color-background);
+	margin: 0px;
+	padding: 0px;
 }
 
 ul {
-  display: flex;
+	display: flex;
 }
 
 li {
-  list-style: none;
+	list-style: none;
 }
 
 header {
-  position: sticky;
-  top: 0px;
-  background-color: var(--color-background);
-  box-sizing: border-box;
-  border: 1px var(--color-header-border) solid;
-  display: flex;
-  justify-content: space-between;
+	position: sticky;
+	top: 0px;
+	background-color: var(--color-background);
+	box-sizing: border-box;
+	border: 1px var(--color-header-border) solid;
+	display: flex;
+	justify-content: space-between;
+	z-index: 1;
 }
 
 #brand__name {
-  padding: 0px 30px;
+	padding: 0px 30px;
 }
 
 .menu {
-  align-items: center;
+	align-items: center;
 }
 
 .menu__item {
-  margin: 0px 10px;
-  padding: 10px;
-  cursor: pointer;
-  align-items: center;
+	margin: 0px 10px;
+	padding: 10px;
+	cursor: pointer;
+	align-items: center;
 }
 
 #home {
-  display: flex;
-  height: 500px;
-  background: url('../imgs/home.jpg') no-repeat center;
-  padding: 50px;
+	display: flex;
+	height: 450px;
+	background: url('../imgs/home.jpg') no-repeat center/cover;
+	padding: 50px;
 }
+
+/* Course */
 
 #course {
-  display: flex;
-  background-color: #F0ECE8;
-  height: 500px;
+	display: flex;
+	background-color: #f0ece8;
 }
 
-.consulting {
-  width: 240px;
-  height: 600px;
-  background-color: aqua;
-  border-radius: 15px;
-  margin: auto;
+.steps {
+	position: relative;
+	width: 300px;
+	height: 400px;
+	background-color: aquamarine;
+	margin: 20px 40px;
+	border-radius: 5px;
+	justify-content: center;
+}
+
+.steps__title {
+	position: absolute;
+	left: 10%;
+	bottom: 10px;
+	background-color: var(--color-light-black);
+	margin: auto;
+	padding: 15px;
+	width: 80%;
+	height: 30%;
+	color: var(--color-orange);
+	opacity: 0.8;
+	text-align: center;
+}
+
+.steps__description::before {
+	border: 1px solid var(--color-orange);
+}
+
+.steps__description {
+}
+
+#consulting {
+	background: url('../imgs/steps/consulting.jpg') center/cover;
+}
+
+#guidance {
+	background: url('../imgs/steps/guidance.jpg') center/cover;
+}
+
+#contract {
+	background: url('../imgs/steps/contract.jpg') center/cover;
 }
 
 /* Place */
+
 #place {
-  background-color: black;
-  height: 500px;
-  padding: 15px;
-  display: flex;
+	background-color: black;
+	height: 500px;
+	padding: 15px;
+	display: flex;
 }
 
 .place__card {
-  width: 300px;
-  height: 400px;
-  background-color: ivory;
-  border-radius: 15px;
-  margin: 20px;
-  padding: 10px;
+	width: 300px;
+	height: 400px;
+	background-color: ivory;
+	border-radius: 15px;
+	margin: 20px;
+	padding: 10px;
 }
 
 .place__card > img {
-  display: block;
-  width: 100%;
-  height: 50%;
-  border-radius: inherit;
-  margin: auto;
+	display: block;
+	width: 100%;
+	height: 50%;
+	border-radius: inherit;
+	margin: auto;
 }
 
-#reserve {
-  background-color: red;
-  position: fixed;
-  right: 0px;
-  top: 50%;
-  cursor: pointer;
+#reservation {
+	background-color: #e1d8d9;
 }
 
 #contact {
-  background-color: var(--color-footer);
-  padding: 20px 0px;
-  color: #FFFFFF;
-  text-align: center;
+	background-color: var(--color-footer);
+	padding: 20px 0px;
+	color: #ffffff;
+	text-align: center;
+}
+
+/* 모바일 */
+@media screeen and (max-width: 768px) {
 }
